Fix word break in path, name, and origin string #527

--- a/visualization/app/codeCharta/ui/attributeSideBar/attributeSideBar.component.scss
+++ b/visualization/app/codeCharta/ui/attributeSideBar/attributeSideBar.component.scss
@@ -52,7 +52,7 @@ attribute-side-bar-component {
 			.node-origin,
 			.node-path {
 				margin: 10px;
-				word-wrap: break-word;
+				word-break: break-all;
 				-webkit-user-select: text;
 				-moz-user-select: text;
 				-ms-user-select: text;
